<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:background="#ffffffff"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content" android:layout_width="wrap_content"
        android:background="#ffffffff" android:orientation="horizontal">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/overtime"
            android:text="@string/data_collection" />
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/overtime_value"
            android:minWidth="100dip"
            android:inputType="text" />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/s"
            android:text="@string/s" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content" android:layout_width="wrap_content"
        android:background="#ffffffff" android:orientation="horizontal">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/circle"
            android:text="@string/circle" />
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/circle_value"
            android:minWidth="100dip"
            android:inputType="text" />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/times"
            android:text="@string/ci" />
    </LinearLayout>

</LinearLayout>