<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back2">
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="10dp">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="设备识别："
                  android:textColor="#ffffff"
                  android:textSize="18sp"/>
        <Space android:layout_width="2dp"
               android:layout_height="wrap_content"/>
        <TextView android:id="@+id/device_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="10dp">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="连接状态："
                  android:textColor="#ffffff"
                  android:textSize="18sp"/>
        <Space android:layout_width="2dp"
               android:layout_height="wrap_content"/>
        <TextView android:id="@+id/connection_state"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/disconnected"
                  android:textColor="#ffffff"
                  android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Major:"
            android:textColor="#ffffff"
            android:textSize="18sp"/>
        <Space android:layout_width="5dp"
            android:layout_height="wrap_content"/>
        <TextView android:id="@+id/deviceControl_major"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textColor="#ffffff"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Minor:"
            android:textColor="#ffffff"
            android:textSize="18sp"/>
        <Space android:layout_width="5dp"
            android:layout_height="wrap_content"/>
        <TextView android:id="@+id/deviceControl_minor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textColor="#ffffff"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="UUID:"
            android:textColor="#ffffff"
            android:textSize="18sp"/>
        <Space android:layout_width="5dp"
            android:layout_height="wrap_content"/>
        <TextView android:id="@+id/deviceControl_uuid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textColor="#ffffff"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_data"
        android:textColor="#ffffff"
        android:textSize="18sp"/>
    <Space android:layout_width="5dp"
        android:layout_height="wrap_content"/>
    <TextView android:id="@+id/data_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:textColor="#ffffff"
        android:textSize="18sp"/>
    </LinearLayout>

    <ExpandableListView android:id="@+id/gatt_services_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</LinearLayout>